# school-ps-backend

./: .env.example  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/modules/: __init__.py
app/modules/auth/infrastructure/: models.py
app/modules/classroom/api/: router.py
app/modules/classroom/application/: bulk_update_pupitre.py  update_pupitre.py
app/modules/classroom/domain/: entity.py  repositories.py  repository.py  service.py
app/modules/classroom/infrastructure/: models.py  repository.py
app/modules/classroom/schemas/: bulk_request.py  bulk_response.py  request.py  response.py
app/modules/inventory/api/: routes.py
app/modules/inventory/api/domain/: repositories.py  service.py
app/modules/inventory/application/: create_borrowing_inventory.py  create_item_inventory.py  create_type_inventory.py  edit_single_item.py  get_items_inventory.py  return_borrowing.py  update_item_inventory.py
app/modules/inventory/domain/: repositories.py  service.py
app/modules/inventory/infrastructure/: repository.py
app/modules/inventory/schemas/: request.py  response.py
app/modules/tuition/infrastructure/: models.py
