[project]
name = "backend"
version = "0.1.0"
description = "Backend for the school peace and safety project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.136.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "httpx>=0.28.1",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.15.11",
  "zuban>=0.1.0",
]
prod = [
  "uvicorn>=0.44.0",
  "psycopg2-binary>=2.9.11",
]
